[package]
name = "rings-batched-merkle-tree"
version = "0.11.0"
description = "Batch Merkle tree implementation."
readme = "README.md"
repository = "https://github.com/helius-labs/privacy-program-libs"
license = "Apache-2.0"
edition = "2021"

[package.metadata.cargo-machete]
ignored = [
    # Used only through cfg(target_os = "solana") sysvar paths.
    "solana-sysvar",
]

[features]
default = []
test-only = []
log = ["dep:solana-msg", "rings-merkle-tree-metadata/log"]
profile-program = ["dep:light-program-profiler", "light-program-profiler/profile-program"]

[dependencies]
rings-account-checks = { workspace = true }
aligned-sized = { workspace = true }
solana-program-error = { workspace = true }
solana-sysvar = { workspace = true }
solana-msg = { workspace = true, features = ["alloc"], optional = true }
solana-address = { workspace = true }
wincode = { workspace = true }
rings-hasher = { workspace = true, features = ["poseidon", "keccak"] }
rings-bloom-filter = { workspace = true }
groth16-solana = { workspace = true }
thiserror = { workspace = true }
rings-merkle-tree-metadata = { workspace = true }
borsh = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
zerocopy = { workspace = true }
light-program-profiler = { workspace = true, optional = true }

[dev-dependencies]
rand = { workspace = true }
rings-merkle-tree = { workspace = true }
rings-account-checks = { workspace = true, features = ["test-only"] }
rings-hasher = { workspace = true, features = ["keccak"] }
rings-client = { workspace = true }
rings-indexed-array = { workspace = true }
rings-merkle-tree-metadata = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
ark-bn254 = { workspace = true }
ark-ff = { workspace = true }

[lints.rust.unexpected_cfgs]
level = "allow"
check-cfg = ['cfg(target_os, values("solana"))']
