[package]
name = "rings-bloom-filter"
version = "0.6.0"
description = "Experimental bloom filter."
readme = "README.md"
repository = "https://github.com/helius-labs/privacy-program-libs"
license = "Apache-2.0"
edition = "2021"

[dependencies]
solana-nostd-keccak = "0.1.3"
num-bigint = { workspace = true }
solana-program-error = { workspace = true }
thiserror = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }

[dev-dependencies]
rand = { workspace = true }
rings-hasher = { workspace = true }
num-bigint = { workspace = true, features = ["rand"] }
