[package]
name = "zolana-bloom-filter"
version = "0.6.0"
description = "Experimental bloom filter."
readme = "README.md"
repository.workspace = true
license.workspace = true
edition = "2021"

[dependencies]
solana-nostd-keccak = "0.1.3"
num-bigint = { workspace = true }
solana-program-error = { workspace = true }
thiserror = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }

[dev-dependencies]
rand = { workspace = true }
zolana-hasher = { workspace = true }
num-bigint = { workspace = true, features = ["rand"] }
