[package]
name = "zolana-interface"
version = "0.1.0"
edition.workspace = true
publish = false

[features]
default = ["verifying-keys", "tree"]
solana = ["dep:solana-account", "dep:solana-instruction"]
events = []
verifying-keys = ["dep:groth16-solana"]
tree = ["dep:zolana-tree"]

[dependencies]
borsh = { workspace = true }
bytemuck = { workspace = true }
solana-account = { workspace = true, optional = true }
solana-address = { workspace = true, features = ["bytemuck", "borsh"] }
solana-instruction = { workspace = true, optional = true }
solana-pubkey = { workspace = true }
groth16-solana = { workspace = true, optional = true }
light-batched-merkle-tree = { workspace = true }
light-hasher = { workspace = true, features = ["sha256"] }
solana-program-error = { workspace = true }
thiserror = { workspace = true }
wincode = { workspace = true }
zolana-event = { workspace = true }
zolana-tree = { workspace = true, optional = true }
