[package]
name = "rings-interface"
version = "0.1.0"
edition.workspace = true
publish = false

[features]
default = ["verifying-keys", "tree"]
solana = ["dep:solana-instruction"]
events = []
verifying-keys = ["dep:groth16-solana"]
tree = ["dep:rings-tree"]

[dependencies]
borsh = { workspace = true }
bytemuck = { workspace = true }
solana-address = { workspace = true, features = ["bytemuck", "borsh"] }
solana-instruction = { workspace = true, optional = true }
solana-pubkey = { workspace = true }
groth16-solana = { workspace = true, optional = true }
rings-batched-merkle-tree = { workspace = true }
rings-hasher = { workspace = true, features = ["sha256"] }
solana-program-error = { workspace = true }
thiserror = { workspace = true }
wincode = { workspace = true }
rings-event = { workspace = true }
rings-tree = { workspace = true, optional = true }
