[package]
name = "rings-merkle-tree-metadata"
version = "0.11.0"
description = "Merkle tree metadata for light-batched-merkle-tree."
readme = "README.md"
repository = "https://github.com/helius-labs/privacy-program-libs"
license = "Apache-2.0"
edition = "2021"

[features]
default = []
anchor = ["anchor-lang"]
idl-build = ["anchor", "anchor-lang/idl-build"]
log = ["dep:solana-msg"]

[dependencies]
thiserror = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
zerocopy = { workspace = true, features = ["derive"] }
solana-address = { workspace = true, features = ["bytemuck", "copy"] }
solana-msg = { workspace = true, features = ["alloc"], optional = true }
solana-sysvar = { workspace = true, features = ["bincode"] }
solana-program-error = { workspace = true }
anchor-lang = { workspace = true, optional = true }
borsh = { workspace = true }

[lints.rust.unexpected_cfgs]
level = "allow"
check-cfg = ['cfg(target_os, values("solana"))']
