[package]
name = "zolana-tree"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
zolana-batched-merkle-tree = { workspace = true }
zolana-hasher = { workspace = true }
pinocchio = { workspace = true }
wincode = { workspace = true }
