[package]
name = "rings-byte-compat"
version = "0.1.0"
edition = "2021"
publish = false

# Proves that accounts written by our `light-batched-merkle-tree` fork are
# byte-identical to upstream crates.io `light-batched-merkle-tree 0.11`, so the
# Photon indexer (which parses with upstream 0.11) can read our accounts.
[dependencies]

[dev-dependencies]
rings-batched = { package = "rings-batched-merkle-tree", path = "../../program-libs/batched-merkle-tree", features = ["test-only"] }
upstream-batched = { package = "light-batched-merkle-tree", version = "0.11", default-features = false }
light-compressed-account = { version = "0.11", default-features = false }
solana-address = { workspace = true }
rings-merkle-tree-metadata = { workspace = true }
