[package]
name = "shielded-pool-tests"
version = "0.1.0"
edition.workspace = true
publish = false

[features]
default = []
localnet = ["zolana-program-test/solana-rpc"]

[dependencies]
anyhow = { workspace = true }
shielded-pool-program = { workspace = true }
solana-instruction = { workspace = true }
solana-keypair = { workspace = true }
solana-message = { workspace = true }
solana-pubkey = { workspace = true }
solana-signature = { workspace = true }
solana-signer = { workspace = true }
solana-transaction = { workspace = true }
zolana-interface = { workspace = true }
zolana-keypair = { workspace = true }
zolana-program-test = { workspace = true }
zolana-transaction = { workspace = true }

[[test]]
name = "localnet_proofless_shield"
path = "tests/localnet_proofless_shield.rs"
required-features = ["localnet"]
