[package]
name = "shielded-pool-tests"
version = "0.1.0"
edition.workspace = true
publish = false

[features]
default = []
localnet = ["zolana-client/solana-rpc"]

[dependencies]
anyhow = { workspace = true }
shielded-pool-program = { workspace = true }
solana-instruction = { workspace = true }
solana-address = { workspace = true }
solana-keypair = { workspace = true }
solana-message = { workspace = true }
solana-pubkey = { workspace = true }
solana-signature = { workspace = true }
solana-signer = { workspace = true }
solana-transaction = { workspace = true }
zolana-interface = { workspace = true }
zolana-keypair = { workspace = true }
zolana-client = { workspace = true }
zolana-program-test = { workspace = true }
zolana-transaction = { workspace = true }

[dev-dependencies]
bytemuck = { workspace = true }
cucumber = { workspace = true }
groth16-solana = { workspace = true }
light-hasher = { workspace = true }
light-merkle-tree-reference = { workspace = true }
num-bigint = { workspace = true }
tokio = { workspace = true }
zolana-test-utils = { workspace = true }
zolana-tree = { workspace = true }

[[test]]
name = "bdd"
harness = false

[[test]]
name = "localnet_e2e"
path = "tests/localnet_e2e.rs"
required-features = ["localnet"]

[[test]]
name = "transact"
path = "tests/transact/transact.rs"

[[test]]
name = "shield_withdraw"
path = "tests/transact/shield_withdraw.rs"
