[package]
name = "shielded-pool-tests"
version = "0.1.0"
edition.workspace = true
publish = false

[features]
default = []
localnet = ["zolana-client/indexer-api", "zolana-client/solana-rpc"]

[dependencies]
anyhow = { workspace = true }
solana-instruction = { workspace = true }
solana-compute-budget-interface = { workspace = true }
serial_test = { workspace = true }
solana-address = { workspace = true }
solana-keypair = { workspace = true }
solana-message = { workspace = true }
solana-pubkey = { workspace = true }
solana-signature = { workspace = true }
solana-signer = { workspace = true }
solana-transaction = { workspace = true }
zolana-interface = { workspace = true }
zolana-event = { workspace = true, features = ["program-test"] }
zolana-keypair = { workspace = true }
zolana-client = { workspace = true }
zolana-program-test = { workspace = true }
zolana-transaction = { workspace = true }

[dev-dependencies]
bytemuck = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
cucumber = { workspace = true }
groth16-solana = { workspace = true }
zolana-hasher = { workspace = true }
zolana-merkle-tree = { workspace = true }
num-bigint = { workspace = true }
tokio = { workspace = true }
zolana-smart-account-client = { workspace = true }
zolana-test-utils = { workspace = true }
zolana-tree = { workspace = true }
mollusk-svm = "0.3.0"
light-program-profiler = { workspace = true, features = ["mollusk"] }
mollusk-solana-account = { package = "solana-account", version = "2.2" }
mollusk-solana-instruction = { package = "solana-instruction", version = "2.2" }
mollusk-solana-pubkey = { package = "solana-pubkey", version = "2.2" }

[[test]]
name = "bench_cu"
path = "tests/bench_cu.rs"

[[test]]
name = "bdd"
harness = false

[[test]]
name = "localnet_e2e"
path = "tests/localnet_e2e.rs"
required-features = ["localnet"]

[[test]]
name = "localnet_deposit"
path = "tests/localnet_deposit.rs"
required-features = ["localnet"]

[[test]]
name = "localnet_photon_e2e"
path = "tests/localnet_photon_e2e.rs"
required-features = ["localnet"]

[[test]]
name = "localnet_wallet_cli_e2e"
path = "tests/localnet_wallet_cli_e2e.rs"
required-features = ["localnet"]

[[test]]
name = "transact"
path = "tests/transact/transact.rs"

[[test]]
name = "shield_withdraw"
path = "tests/transact/shield_withdraw.rs"

[[test]]
name = "p256"
path = "tests/transact/p256.rs"
