[package]
name = "spp-test-validator"
version = "0.1.0"
edition.workspace = true
publish = false
# Only the explicit `lifecycle` test target builds; tests/{actor,localnet,world}.rs
# are its modules, not standalone integration-test binaries.
autotests = false

[dependencies]
anyhow = { workspace = true }
p256 = { workspace = true }
solana-account = { workspace = true }
solana-address = { workspace = true }
solana-compute-budget-interface = { workspace = true }
solana-instruction = { workspace = true }
solana-keypair = { workspace = true }
solana-message = { workspace = true }
solana-pubkey = { workspace = true }
solana-signature = { workspace = true }
solana-signer = { workspace = true }
solana-transaction = { workspace = true }
rings-client = { workspace = true, features = ["indexer-api", "solana-rpc"] }
rings-event = { workspace = true, features = ["program-test"] }
rings-interface = { workspace = true }
rings-keypair = { workspace = true }
rings-program-test = { workspace = true }
rings-test-utils = { workspace = true }
rings-transaction = { workspace = true }
rings-user-registry-interface = { workspace = true, features = ["solana"] }

[dev-dependencies]
cucumber = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }

[[test]]
name = "lifecycle"
path = "tests/lifecycle.rs"
harness = false
