[package]
name = "squads-zone-smart-account"
version = "0.1.0"
edition.workspace = true
publish = false
# Only the explicit `lifecycle` test target builds; tests/{actor,localnet,world,
# ...}.rs are its modules, not standalone integration-test binaries.
autotests = false

# BDD localnet + Photon suite for the Squads zone driven by a Squads SMART ACCOUNT.
# A real Squads smart-account vault is the executing party / UTXO owner: it executes
# the deposit and the sync `transact` (transfer + withdrawal) wrapped in the
# smart-account `executeTransactionSyncV2`, and it creates + owns the async proposal
# (`create_proposal` wrapped in `executeTransactionSyncV2`), which a co-signer keypair
# then settles via `execute_proposal`. The zone `owner` identity is the vault's
# pk-field-hash (`owner_pk_field`). The proof-gated scenarios forward a real squads
# zone proof plus the SPP zone-rail proof, so a prover with the squads
# (`squads_zone_*`) and SPP zone-rail (`transfer_p256_zone_*`) keys must be
# reachable. The suite loads the SPP, user-registry, smart-account, and Squads zone
# SBF binaries into a `zolana test-validator`. Build them first:
#
#   just build-programs build-cli ensure-smart-account ensure-photon ensure-squads-keys
#   cargo build-sbf --features bpf-entrypoint \
#       --manifest-path zones/squads/program/Cargo.toml
#
# Run via `just test-squads-zone-smart-account`. The suite skips when any binary is missing.

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
p256 = { workspace = true }
solana-account = { workspace = true }
solana-address = { workspace = true }
solana-commitment-config = { workspace = true }
solana-address-lookup-table-interface = { workspace = true }
solana-compute-budget-interface = { workspace = true }
solana-instruction = { workspace = true }
solana-rpc-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-keypair = { workspace = true }
solana-message = { workspace = true }
solana-pubkey = { workspace = true }
solana-signature = { workspace = true }
solana-signer = { workspace = true }
solana-transaction = { workspace = true }
zolana-client = { workspace = true, features = ["indexer-api", "solana-rpc"] }
zolana-event = { workspace = true, features = ["program-test"] }
zolana-interface = { workspace = true }
zolana-keypair = { workspace = true }
zolana-program-test = { workspace = true }
zolana-squads-client = { path = "../../zones/squads/client" }
zolana-squads-interface = { path = "../../zones/squads/interface", features = ["solana"] }
zolana-squads-sdk = { path = "../../zones/squads/sdk", features = ["prover"] }
zolana-test-utils = { workspace = true }
zolana-transaction = { workspace = true }
zolana-user-registry-interface = { workspace = true, features = ["solana"] }

[dev-dependencies]
cucumber = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }

[[test]]
name = "lifecycle"
path = "tests/lifecycle.rs"
harness = false
