[package]
name = "rings-test-utils"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
base64 = { workspace = true }
borsh = { workspace = true }
bytemuck = { workspace = true }
solana-account = { workspace = true }
solana-address = { workspace = true }
solana-instruction = { workspace = true }
solana-keypair = { workspace = true }
solana-pubkey = { workspace = true }
solana-signature = { workspace = true }
solana-signer = { workspace = true }
rings-client = { workspace = true }
rings-interface = { workspace = true }
rings-event = { workspace = true, features = ["program-test"] }
rings-program-test = { workspace = true }
rings-transaction = { workspace = true }
