[package]
name = "user-registry-tests"
version = "0.1.0"
edition.workspace = true
publish = false

[lib]
name = "user_registry_tests"
path = "src/lib.rs"

[dependencies]
borsh = { workspace = true }
litesvm = { workspace = true }
solana-instruction = { workspace = true }
solana-keypair = { workspace = true }
solana-message = { workspace = true }
solana-pubkey = { workspace = true }
solana-signer = { workspace = true }
solana-transaction = { workspace = true }
zolana-interface = { workspace = true, features = ["solana"] }

[dev-dependencies]
cucumber = { workspace = true }
tokio = { workspace = true }

[[test]]
name = "bdd"
harness = false
