[package]
name = "zone-test-program"
version = "0.1.0"
edition.workspace = true
publish = false

# Test-only fixture: a minimal "policy zone" program that CPIs into SPP,
# signing with its `zone_auth` PDA. It enforces no policy — it exists so
# integration tests can exercise the zone-signer path (a PDA can only sign via
# a CPI from its owning program).

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
bpf-entrypoint = []
no-entrypoint = []
cpi = ["no-entrypoint"]
test-sbf = []

[dependencies]
borsh = { workspace = true }
pinocchio = { workspace = true, features = ["cpi"] }
solana-instruction = { workspace = true }
solana-pubkey = { workspace = true }
zolana-interface = { workspace = true, features = ["solana"] }

[lints.rust.unexpected_cfgs]
level = "allow"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]
