[package]
name = "light-registry"
version = "2.1.0"
description = "Light core protocol logic"
repository = "https://github.com/Lightprotocol/light-protocol"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "light_registry"

[package.metadata.cargo-machete]
ignored = [
    # Required by Anchor-generated instruction/accounts code.
    "borsh",
]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test-sbf = []
bench-sbf = []
sdk = []

[dependencies]
aligned-sized = { workspace = true }
anchor-lang = { workspace = true, features = ["init-if-needed"] }
borsh = { workspace = true }
solana-security-txt = "1.1.0"
solana-program = { workspace = true }
[target.'cfg(not(target_os = "solana"))'.dependencies]
solana-sdk = { workspace = true }

[lints.rust.unexpected_cfgs]
level = "allow"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]
