[package]
name = "shielded-pool-program"
version = "0.1.0"
edition.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
bpf-entrypoint = []
no-entrypoint = []
cpi = ["no-entrypoint"]
test-sbf = []

[dependencies]
borsh = { workspace = true }
light-batched-merkle-tree = { workspace = true, default-features = false, features = ["pinocchio", "solana-msg"] }
light-verifier = { workspace = true }
light-hasher = { workspace = true, features = ["keccak", "poseidon"] }
pinocchio-system = { workspace = true }
light-sparse-merkle-tree = { workspace = true }
pinocchio = { workspace = true }
thiserror = { workspace = true }
zolana-interface = { workspace = true }

[dev-dependencies]
# curve25519: off-chain PDA derivation in tests needs the on-curve check.
solana-pubkey = { workspace = true, features = ["curve25519"] }

[lints.rust.unexpected_cfgs]
level = "allow"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]
