[package]
name = "shielded-pool-program"
version = "0.1.0"
edition.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
bpf-entrypoint = []
no-entrypoint = []
cpi = ["no-entrypoint"]
test-sbf = []
profile-program = ["light-program-profiler/profile-program"]

[dependencies]
ark-bn254 = { version = "0.5", default-features = false }
ark-ff = { version = "0.5", default-features = false }
borsh = { workspace = true }
bytemuck = { workspace = true }
groth16-solana = { workspace = true }
zolana-account-checks = { workspace = true }
zolana-hasher = { workspace = true }
light-program-profiler = { workspace = true }
pinocchio-system = { workspace = true }
pinocchio = { workspace = true }
zolana-interface = { workspace = true }
zolana-tree = { workspace = true }
zolana-user-registry-interface = { workspace = true }

[lints.rust.unexpected_cfgs]
level = "allow"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]
